--- a/TicketsManager.API/TicketsManager.API.csproj
+++ b/TicketsManager.API/TicketsManager.API.csproj
@@ -18,6 +18,7 @@
   <ItemGroup>
     <ProjectReference Include="..\TicketsManager.Business\TicketsManager.Business.csproj" />
     <ProjectReference Include="..\TicketsManager.Common\TicketsManager.Common.csproj" />
+    <ProjectReference Include="..\TicketsManager.DataAccess\TicketsManager.DataAccess.csproj" />
   </ItemGroup>
 
 </Project>
