--- a/TicketsManager.DataAccess/TicketsManager.DataAccess.csproj
+++ b/TicketsManager.DataAccess/TicketsManager.DataAccess.csproj
@@ -22,4 +22,8 @@
     <ProjectReference Include="..\TicketsManager.Common\TicketsManager.Common.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="EntityConfigurations\" />
+  </ItemGroup>
+
 </Project>
