--- a/TicketsManager.API/TicketsManager.API.csproj
+++ b/TicketsManager.API/TicketsManager.API.csproj
@@ -21,4 +21,8 @@
     <ProjectReference Include="..\TicketsManager.DataAccess\TicketsManager.DataAccess.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Controllers\" />
+  </ItemGroup>
+
 </Project>
