--- a/TicketsManager.DataAccess/TicketsManager.DataAccess.csproj
+++ b/TicketsManager.DataAccess/TicketsManager.DataAccess.csproj
@@ -24,6 +24,7 @@
 
   <ItemGroup>
     <Folder Include="EntityConfigurations\" />
+    <Folder Include="EFCustomizations\" />
   </ItemGroup>
 
 </Project>
