--- a/TicketsManager.Business/TicketsManager.Business.csproj
+++ b/TicketsManager.Business/TicketsManager.Business.csproj
@@ -16,6 +16,11 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="15.0.1" />
+    <PackageReference Include="MediatR" Version="13.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\TicketsManager.Common\TicketsManager.Common.csproj" />
   </ItemGroup>
 
